# web-01-09-2024

./: .gitignore  Dockerfile  Dockerfile.pipenv  Dockerfile.poetry  Pipfile  banking.py  banking_r_lock.py  main.py  processing.py  pyproject.toml  requirements.txt
names/: names.txt
