[tool.poetry]
name = "web-01-09-2024"
version = "0.1.0"
description = ""
authors = ["Eduard Litvinchuck <litvinchukeduard@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
